<resources>
    <string name="app_name">Workout</string>
    <string name="title_home">Workouts</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_profile">Profile</string>
    <string name="exercises">Exercises</string>
    <string name="empty_add_exercise_list">No exercises added.</string>
    <string name="empty_workout_list">No workouts created.</string>
    <string name="color_tag">Color tag</string>
    <string name="new_workout">New workout</string>
    <string name="new_workout_name_hint">Workout name</string>
    <string name="new_workout_day_label">Select Workout Day</string>
    <string name="add_exercise_button">Add exercise</string>
    <string name="start_workout_button">Start Workout</string>
    <string name="pause_workout_button">Pause Workout</string>
    <string name="search_workout_hint">Search workout</string>
    <string name="carrier_rate_warning">We will send you a One time SMS message. Carrier rates may apply</string>
    <string name="phone_number_hint">Your phone number</string>
    <string name="button_next">Next</string>
    <string name="empty_phone_input">Insert your phone number</string>
    <string name="invalid_pin">Invalid code inserted</string>
    <string name="exercise_dialog_hint">Exercise name</string>
    <string name="exercise_dialog_reps">reps</string>
    <string name="exercise_dialog_sets">sets</string>
    <string name="exercise_dialog_weight">Kg</string>
    <string name="exercise_dialog_confirm">Add Exercise</string>
    <string name="exercise_dialog_edit">Edit Exercise</string>
    <string name="cancel">Cancel</string>
    <string name="invalid_phone_number">Invalid phone number</string>
    <string name="popupmenu_edit">Edit</string>
    <string name="popupmenu_share">Share</string>
    <string name="popupmenu_delete">Delete</string>
    <string name="resend_code">Didn\'t receive the code?</string>
    <string name="resend_code_button">Re-send SMS</string>
    <string name="verification_code">Verification Code</string>
    <string name="pin_instruction">Please type the code sent to</string>
    <string name="title_activity_calendar">Calendar</string>
    <string name="share_workout_message">Send this link to anyone to share your workout plan:</string>
    <string name="share_workout_title">Share workout</string>
    <string name="dialog_close">Close</string>
    <string name="clipboard_copy">Copy link</string>
    <string name="title_qr_scanner">Scan QR</string>
    <string name="delete_workout_dialog_message">This will permanently delete this workout.</string>
    <string name="delete_workout_dialog_title">Delete Workout?</string>
    <string name="dialog_delete">Delete</string>
    <string name="workout_not_found">Could not find Workout.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splashscreen_logo">Splashscreen Logo</string>
    <string name="delete_btn">Delete Workout</string>
    <string name="delete_exercise">Delete Exercise</string>

    <array name="body_parts">
        <item>Abdominals</item>
        <item>Calves</item>
        <item>Lats</item>
        <item>Middleback</item>
        <item>Neck</item>
        <item>Quadriceps</item>
        <item>Triceps</item>
        <item>Biceps</item>
        <item>Chest</item>
    </array>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_maps">Maps</string>
</resources>

