<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.LogInActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="87dp"
        android:layout_height="150dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cellphone" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/phoneInput"
        android:layout_width="wrap_content"
        android:layout_height="84dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <EditText
            android:id="@+id/editText_carrierNumber"
            android:layout_width="238dp"
            android:layout_height="56dp"
            android:ems="10"
            android:hint="@string/phone_number_hint"
            android:inputType="phone"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

    </android.support.design.widget.TextInputLayout>
    <com.hbb20.CountryCodePicker
        android:id="@+id/ccp"
        android:layout_width="76dp"
        android:layout_height="56dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        app:ccp_showFlag="true"
        app:ccp_showFullName="false"
        app:ccp_showNameCode="false"
        app:ccp_showPhoneCode="false"
        app:ccp_defaultNameCode="br"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:ccp_autoDetectCountry="true"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="274dp"
        android:layout_height="59dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/carrier_rate_warning"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:fontFamily="@font/poppins_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneInput" />


    <Button
        android:id="@+id/button"
        android:layout_width="296dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:drawableRight="@drawable/ic_arrow"
        android:onClick="sendMessage"
        android:text="@string/button_next"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>